@@ -1,5 +1,6 @@
 LIST OF CHANGES
 
+ - staging monitor changes for SP flowcells
  - Update URL for production Sequencescape LIMS
 
 release 91.0.0
